fix: fix problem with missing spaces when pressing "enter"

--- a/src/app/style/App.css
+++ b/src/app/style/App.css
@@ -22,7 +22,7 @@ body {
 .header {
     display: flex;
     width: 75vw;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 .title {
@@ -45,7 +45,7 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
     border-radius: 20px;
-    border: 5px solid rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.6);
 }
 
 body::-webkit-scrollbar-track {
@@ -54,11 +54,11 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb:hover {
-    border: 5px solid rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.7);
 }
 
 body::-webkit-scrollbar-thumb:active {
-    border: 5px solid rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.8);
 }
 
 .areaContainer {
